--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.7",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "web3": "^1.7.3",
+    "web3modal": "^1.9.6"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
