--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+		"paths": {
+			"components/*": ["./components/*"],
+			"pages/*": ["./pages/*"],
+			"styles/*": ["./styles/*"],
+			"artifacts/*": ["./artifacts/*"],
+			"helpers/*": ["./helpers/*"],
+			"context/*": ["./context/*"],
+		}
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
