--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.7",
+    "ipfs-http-client": "^56.0.2",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
